# airtnt

./: Makefile  README.txt
aws/: install.sh  run.sh
client-ocr/: 1.sav  11.sav  15.sav  2.sav  20.sav  25.sav  3.sav  Makefile  parse_all.sh  parse_data.sh  run.sh  run_multiple.sh
client-ocr/isv_app/: .Letter.h.swp  crypto.h  isv_app.cpp  misc.h
client-ocr/isv_enclave/: .OCR.cpp.swp  OCR.cpp  isv_enclave.cpp  isv_enclave.edl  life.h  ocr.h  ocr_type.h
client-ocr/service_provider/: .network_ra.cpp.swp  network_ra.cpp  (+2 more)
isv_app/: isv_app.cpp
isv_enclave/: isv_enclave.cpp  isv_enclave.edl  life.cpp  life.h
ocr-nosgx/: CMakeLists.txt  LICENSE  README.md
ocr-nosgx/cmake_modules/: FindSFML.cmake
ocr-nosgx/src/: Alphabet.cpp  Alphabet.h  Letter.cpp  Letter.h  image_util.cpp  image_util.h  main.cpp  matrix.cpp  matrix.h  processing.cpp  processing.h  util.cpp  util.h
ocr-sgx/: Makefile  README.md
ocr-sgx-mess/: Makefile
ocr-sgx-mess-2/: Makefile
ocr-sgx-mess-timing/: Makefile  time.sh
sample_libcrypto/: sample_libcrypto.h
server/: Makefile  chat_message.hpp  misc.h  network_ra.cpp  network_ra.h  server.cpp  service_provider.cpp  service_provider.h
server-ocr/: Makefile  crypto.cpp  misc.h  network_ra.cpp  network_ra.h  server.cpp  service_provider.cpp  service_provider.h
service_provider/: network_ra.cpp  network_ra.h  service_provider.cpp  service_provider.h
tcp/: .Makefile.swp  Makefile  backup.cpp  client.cpp  server.cpp
timings/: createfigure.m  enclave_calls.m  enclave_calls_fig.m  life_timing.m  ocr_imsize.m  ocr_timing.m  plot_timing.m
(+1117 files in other folders)
